<resources>
    <string name="app_name">SahamKu</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tx_company">Press Metal</string>
    <string name="tx_price">RM 2.73</string>
    <string name="tx_unit">500 unit</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="tx_fee">RM 18</string>
    <string name="tx_total">RM 1250.20</string>
    <string name="unit">Unit</string>
    <string name="total">Total</string>
    <string name="buy">Buy</string>
    <string name="new_stock">New Stock</string>
</resources>
